# bfc-ir

./: Cargo.toml  README.md
src/: bfir.rs  bounds.rs  diagnostics.rs  execution.rs  lib.rs  peephole.rs  peephole_tests.rs  soundness_tests.rs
