[package]
name = "bfc-ir"
version = "1.10.0"
authors = ["Wilfred Hughes <me@wilfred.me.uk>", "Christopher Mahoney <github.com/Alextopher>"]
edition = "2018"
homepage = "https://github.com/Alextopher/bfc-ir"
repository = "https://github.com/Alextopher/bfc-ir"
description = "The IR and peephole optimizations stolen from `bfc`"
readme = "README.md"
license = "GPL-2.0"

[dependencies]
itertools = "0.10.3"
colored = "2"
bitflags = "1.3.2"

[dev-dependencies]
quickcheck = "0.9.2"
pretty_assertions = "0.6.1"
